byte-code-compiler/test_files/typing/bad/testfile-call-2.psc

int_32 f(int_32 x) {}
int_32 main() { f(1, 2); }

